<resources>
    <string name="app_name">MortgageCalculator</string>
    <string name="action_new">New</string>
    <string name="action_about">About</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="PropertyInfo">Property Info</string>
    <string name="lblPropertyType">Property Type:</string>
    <string name="lblStreetAddress">Street Address:</string>
    <string name="lblCity">City:</string>
    <string name="lblState">State:</string>
    <string name="lblZipCode">ZipCode:</string>
    <string name="LoanInfo">Loan Info</string>
    <string name="lblPropertyPrice">Property Price:</string>
    <string name="lblDownPayment">Down Payment:</string>
    <string name="lblAPR">Annual Percentage Rate:</string>
    <string name="lblTerms">Terms:</string>
    <string name="btnCalculate">Calculate</string>
    <string name="lblOutput">Monthly Payment:</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDelete">Delete</string>
    <string name="lblLoanAmount">Loan Amount:</string>

    <string-array name="property_type">
        <item>House</item>
        <item>Townhouse</item>
        <item>Condo</item>
    </string-array>

    <string-array name="us_cities">
        <item>New York</item>
        <item>San Jose</item>
        <item>Austin</item>
        <item>Jacksonville</item>
        <item>Indianapolis</item>
        <item>Columbus</item>
        <item>San Francisco</item>
        <item>Dallas</item>
        <item>Los Angeles</item>
        <item>Chicago</item>
        <item>Houston</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>Sacramento</item>
    </string-array>

    <string-array name="us_states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District Of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>

        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
