<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/housemarker" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--PropType-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblPropertyType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblPropertyType" />

            <TextView
                android:id="@+id/PropertyType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>
        <!--StreetAddress-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblStreetAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblStreetAddress" />

            <TextView
                android:id="@+id/StreetAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>
        <!--City-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCity" />

            <TextView
                android:id="@+id/City"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>
        <!--Loan Amount-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblLoanAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblLoanAmount" />

            <TextView
                android:id="@+id/LoanAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>
        <!--APR-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblAPR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAPR" />

            <TextView
                android:id="@+id/APR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>
        <!--Monthly Payment-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblMonthlyPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblOutput" />

            <TextView
                android:id="@+id/MonthlyPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>
        <!--Buttons-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:text="@string/btnEdit" />


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hiddenVar"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>